--- a/src/index.css
+++ b/src/index.css
@@ -1,61 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.box {
-  border: 1px solid #ccc;
-  padding: 20px;
-  width: 400px;
-  background-image: url("/Users/kmbl278201/Downloads/FileUpload.jpg");
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-}
 .App {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
   height: 100vh;
+}
+
+.banner {
+  background-color: #ff0000;
+  padding: 1.5rem;
+}
+
+.logo {
+  width: 150px;
+}
+
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.2rem;
+  border: 2px dashed #000;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  width: 80%;
+  max-width: 600px;
+  margin: auto;
 }
 
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 0.75rem;
 }
 
-input[type="file"] {
-  padding: 10px 20px;
-  margin: 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  cursor: pointer;
-}
-
-input[type="file"]:hover {
-  background-color: #0056b3;
+h3 {
+  font-family: Arial, sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #333;
+  margin: 0;
 }
 
 input[type="submit"] {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
+  color: white;
+  height: 2.5rem;
+  padding: 5px 25px;
+  background: #0066a2;
+  border: 0 none;
   cursor: pointer;
-}
-
-input[type="submit"]:hover {
-  background-color: #0056b3;
+  border-radius: 5px;
+  margin-top: 0.75rem;
+  width: 100%;
+  max-width: 200px;
 }
